<resources>
    <string name="app_name">Crypto Broker Wallet</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="no_new_open_negotiations">No New\nOpen Negotiations</string>
    <string name="no_new_open_contracts">No New\nOpen Contracts</string>
    <string name="no_contracts">No Contracts</string>
    <string name="identity_img" translatable="false">person_img</string>
    <string name="arrow">arrow</string>
    <string name="at">\@</string>
    <string name="cbw_unit_number" translatable="false">1</string>
    <string name="cbw_no_market_exchange_rates_to_show">No Market Exchange Rates to Show</string>
    <string name="buy">Buying</string>
    <string name="unit_number" translatable="false">1</string>
    <string name="waiting_for_you">Waiting for you</string>
    <string name="about_to_expire">About to expire</string>
    <string name="waiting_for_the_customer">Waiting for the Customer</string>
    <string name="waiting_for_closing">Negotiation is Closing</string>
    <string name="negotiation_closed">Close</string>
    <string name="negotiation_cancelled">Cancelled</string>
    <string name="negotiation_cancel">CANCEL</string>
    <string name="contract_closed">Close</string>
    <string name="contract_cancelled">Cancelled</string>
    <string name="receiving">Receiving</string>
    <string name="sending">Sending</string>
    <string name="sold">Sold</string>
    <string name="selling">Selling</string>
    <string name="sell_text_and_price">Sell: %1$s</string>
    <string name="buy_text_and_price">Buy: %1$s</string>
    <string name="market_exchange_rate">MARKET EXCHANGE RATE</string>
    <string name="market_exchange_rate_text">Market Exchange Rate</string>
    <string name="cbw_exchange_rate_summary" translatable="false">1 %1$s @ %2$s %3$s</string>
    <string name="cbw_buying_details">Buying %1$s %2$s</string>
    <string name="cbw_buying_details2">BUYING %1$s</string>
    <string name="cbw_sold_quantity_and_currency" translatable="false">%1$s %2$s %3$s</string>
    <string name="cbw_earning_amount" translatable="false">%1$s %2$s</string>
    <string name="cbw_contract_history_action_no_filter_text">No filter</string>
    <string name="cbw_contract_history_action_filter_succeed_text">Succeed</string>
    <string name="cbw_contract_history_action_filter_canceled_text">Canceled</string>
    <string name="title_activity_broker_list" translatable="false">BrokerListActivity</string>
    <string name="delivery_date_title">Customer Delivery Date</string>
    <string name="delivery_date_text">Delivery Date: </string>
    <string name="notes">Notes</string>
    <string name="exchange_rate_reference">Exchange Rate Reference</string>
    <string name="suggested_exchange_rate">Suggested:</string>
    <string name="market_text">Market: </string>
    <string name="status_changed">CHANGED</string>
    <string name="cbw_amount_to_sell">Amount to Sell</string>
    <string name="cbw_negotiation_note">Negotiation Note</string>
    <string name="cbw_negotiation_note_hint">Add A Note Here </string>
    <string name="selling_text">Selling: </string>
    <string name="amount">Amount</string>
    <string name="you_will_receive_amount">You will receive: </string>
    <string name="merchandise_delivery_title">Merchandise Delivery</string>
    <string name="delivery_type">Delivery Type: </string>
    <string name="broker_locations_title">Broker Locations</string>
    <string name="selected_location">Selected Location: </string>
    <string name="status_confirm">CONFIRM</string>
    <string name="status_accepted">ACCEPTED</string>
    <string name="broker_bank_account_title">Broker Bank Accounts</string>
    <string name="selected_bank_account">Selected Bank Account: </string>
    <string name="customer_locations_title">Customer Locations</string>
    <string name="customer_bank_account_title">Customer Bank Accounts</string>
    <string name="payment_date_title">Broker Delivery Date</string>
    <string name="payment_date">Payment Date: </string>
    <string name="add_a_note_button">ADD A NOTE</string>
    <string name="payment_methods_title">Payment Method</string>
    <string name="payment_method">Method: </string>
    <string name="payment_date_text">Payment Date: </string>
    <string name="yours">Yours:</string>
    <string name="expiration_date_text">Expiration Date:</string>
    <string name="expiration_date_title">Negotiation Expiration Date</string>
    <string name="cbw_identity_alias_default_text">Crypto Broker</string>
    <string name="cbw_client_information">Client Information</string>
    <string name="cbw_trough_text">Trough</string>
    <string name="cbw_and_receive_text">And Receive</string>
    <string name="cbw_you_sold">You Sold</string>
    <string name="cbw_amount_to_receive">Amount To Receive</string>
    <string name="cbw_cancellation_reason_title">Cancellation Reason:</string>
    <string name="cbw_check_negotiation_details">Check Negotiation Details</string>
    <string name="cbw_contract_details_last_update_date">At Date: %1$s</string>
    <string name="cbw_amount_sold">Amount Sold</string>
    <string name="cbw_contract_details_payment_method">Payment Method</string>
    <string name="cbw_amount_received">Amount Received</string>
    <string name="cbw_action_filter">Filter</string>
    <string name="cbw_set_identity_wizard_description">Please choose one identity to use in this wallet. This step can not be undone.</string>
    <string name="cbw_welcome">Welcome</string>
    <string name="cbw_next_step">Next Step</string>
    <string name="cbw_select_identity_warning_msg">You need to select an Identity</string>
    <string name="cbw_select_stock_wallets_warning_msg">You need to select at least two Wallets</string>
    <string name="cbw_select_providers_warning_msg">You need to select at least one Provider</string>
    <string name="cbw_add_location_warning_msg">You need to provide at least one Location</string>
    <string name="cbw_automatic_restock">Automatic Restock</string>
    <string name="cbw_no_selected_wallets">No Selected Wallets</string>
    <string name="cbw_city">City</string>
    <string name="cbw_state_province">State/Province</string>
    <string name="cbw_zip_postal_code">Zip/Postal Code</string>
    <string name="cbw_address_line_1">Address line 1</string>
    <string name="cbw_address_line_2">Address line 2</string>
    <string name="cbw_create">Create</string>
    <string name="cbw_cancel_caps">CANCEL</string>
    <string name="cbw_delete_caps">DELETE</string>
    <string name="cbw_delete_location_dialog_title">Delete Location</string>
    <string name="cbw_delete_location_dialog_msg">"Do you want to delete this location?"</string>
    <string name="cbw_delete_provider_dialog_title">Delete Provider</string>
    <string name="cbw_delete_provider_dialog_msg">"Do you want to delete this provider?"</string>
    <string name="cbw_delete_wallet_dialog_title">Delete Wallet</string>
    <string name="cbw_delete_wallet_dialog_msg">"Do you want to delete this wallet?"</string>
    <string name="cbw_no_selected_providers">No Selected Providers</string>
    <string name="cbw_finish">Finish</string>
    <string name="cbw_select_your_bank_account">Your Bank Accounts</string>
    <string name="cbw_no_selected_bank_account">No Selected Bank Accounts</string>
    <string name="cbw_select_your_bank_account_text">Add <b>bank accounts</b> to your Broker Wallet from which you can <b>restock</b> or <b>destock</b> funds.</string>
    <string name="cbw_stock_management_text">Add or remove from your Stock by tapping an Associated Wallet and setting an Amount</string>
    <string name="cbw_stock_management_spread_text">Set a Spread (the difference between ask and bid price of your Merchandise)</string>
    <string name="cbw_wizard_bank_account_description">You must select the Bank Account from the Bank Wallet you selected as Earning</string>
    <string name="cbw_wizard_bank_account_title">Bank Accounts</string>
    <string name="cbw_wizard_locations_description">Add at least one <b>location</b>, where transactions <b>made in person by you</b> might take place.</string>
    <string name="cbw_add_location">+ Add a Location</string>
    <string name="cbw_your_location">Your Locations</string>
    <string name="cbw_your_location_text">You must add at least one location to deliver or receive the merchandise</string>
    <string name="cbw_no_locations_added">No Locations Added</string>
    <string name="cbw_add_bank_account">+ Add Bank Account</string>
    <string name="cbw_crypto">Crypto</string>
    <string name="cbw_cash">Cash</string>
    <string name="cbw_bank">Bank</string>
    <string name="cbw_identity_wallet_user">Intra User Identity</string>
    <string name="cbw_identity_dialog_hint">User Name</string>
    <string name="cbw_identity_dialog_title_btc">Intra User Identity</string>
    <string name="cbw_identity_dialog_description_btc">To receive or send BTC must create an Intra User Identity</string>
    <string name="cbw_identity_dialog_description2_btc">To create the identity now?\nIndicate your User Name and push the button Create.</string>
    <string name="cbw_settings_locations_description">You must have at least one location to make your transactions</string>
    <string name="cbw_settings_locations_title">Manage Your Locations</string>
    <string name="cbw_save">Save</string>
    <string name="cbw_ctd_title">Transaction</string>
    <string name="cbw_ctd_amount_tag">Amount</string>
    <string name="cbw_ctd_amount_hint">Enter amount</string>
    <string name="selected_providers">SELECTED PROVIDERS</string>
    <string name="wizard_locations_title">Add Your Locations</string>
    <string name="cbw_contract_details_contract_title">SELLING BTC</string>
    <string name="cbw_contract_details_negotiation_details">NEGOTIATION DETAILS</string>
    <string name="cbw_contract_history_sold_quantity_and_currency" translatable="false">%1$s %2$s %3$s</string>
    <string name="cbw_contract_history_exchange_rate_amount_and_currency" translatable="false">1 %1$s @ %2$s %3$s</string>
    <string name="bought">Bought</string>
    <string name="cbw_current_earings_title">Current Earnings:</string>
    <string name="cbw_earning_wizard_item_msg">Assign a wallet here</string>
    <string name="reception_method_title">Reception Method</string>
    <string name="reception_method">Method</string>
    <string name="cbw_crypto_address_customer">Customer\'s Crypto Address</string>
    <string name="cbw_crypto_address_broker">Broker\'s Crypto Address</string>
    <string name="cbw_bank_account_customer">Customer\'s Bank Account</string>
    <string name="cbw_bank_account_broker">Broker\'s Bank Account</string>
    <string name="cbw_crypto_address_title">Crypto Address</string>
    <string name="cbw_bank_account_title">Bank Account</string>
    <string name="cbw_insert_note">Insert Note</string>
    <string name="cancel">Cancel</string>
    <string name="cbw_fee_miner_speed_1">SLOW</string>
    <string name="cbw_fee_miner_speed_2">NORMAL</string>
    <string name="cbw_fee_miner_speed_3">FAST</string>
    <string name="cbw_fee_miner_value">Fee miner:</string>
    <string name="cbw_fee_speed_text">Select the confirmation speed for a bitcoin transaction. More speed means more fee</string>
    <string name="cbw_fee_origin_text">Select if the fee will be taken from the bitcoin wallet or from the bitcoins to send</string>
    <string name="cbw_fee_transaction">FEE TYPE</string>
    <string name="cbw_fee_confirmation_time">FEE ORIGIN</string>
    <string name="cbw_stock_tittle">STOCK</string>
    <string name="cbw_restock_title">Restock</string>
    <string name="cbw_destock_title">Destock</string>
    <string name="amount_to_restock_or_destock">Specify an amount to restock or destock</string>
    <string name="ok">ok</string>
</resources>