<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/cbw_contract_history_filter_menu_button"
        android:icon="@drawable/ic_action_filters"
        android:orderInCategory="100"
        android:title="@string/cbw_action_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/cbw_action_no_filter"
                android:title="@string/cbw_contract_history_action_no_filter_text"/>
            <item
                android:id="@+id/cbw_action_filter_succeed"
                android:title="@string/cbw_contract_history_action_filter_succeed_text"/>
            <item
                android:id="@+id/cbw_action_filter_cancel"
                android:title="@string/cbw_contract_history_action_filter_canceled_text"/>
        </menu>

    </item>
</menu>
