<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:background="@color/white"
        android:orientation="vertical">

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cbw_fee_speed_text"
            android:textColor="#777777"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:orientation="vertical"
                >

                <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:text="@string/cbw_fee_transaction"
                    android:textColor="@color/cbw_wizard_color"
                    android:textSize="14sp"
                    />


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/cbw_wizard_color"/>
                <RadioGroup
                    android:id="@+id/cbw_radio_button_group"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checkedButton="@+id/cbw_radio_button_slow"
                   >
                    <RadioButton
                        android:id="@+id/cbw_radio_button_slow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/cbw_radionbutton"
                        android:text="@string/cbw_fee_miner_speed_1"
                        android:layout_marginTop="20dp"
                       />
                    <RadioButton
                        android:id="@+id/cbw_radio_button_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/cbw_radionbutton"
                        android:text="@string/cbw_fee_miner_speed_2"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal" />
                    <RadioButton
                        android:id="@+id/cbw_radio_button_fast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/cbw_radionbutton"
                        android:text="@string/cbw_fee_miner_speed_3"

                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"/>
                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/cbw_fee_miner_value"
                    android:textColor="@color/description_text_status_confirm"
                    android:textSize="13sp" />
                <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="0.0001000 BTC"
                    android:textColor="@color/description_text_status_confirm"
                    android:textSize="13sp"
                    android:id="@+id/cbw_fee_miner_amount"
                     />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cbw_fee_origin_text"
                android:textColor="#777777"
                android:textSize="14sp"
                />


            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbw_fee_confirmation_time"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textColor="@color/cbw_wizard_color"
                android:textAllCaps="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/cbw_wizard_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:paddingBottom="4dp">

            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbw_fee_origin_spinner"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/cbw_save_fee_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@color/cbw_wizard_color"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/cbw_save"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>