<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/negotiation_note_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/cbw_card_background_status_confirm"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    tools:visibility="visible">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/cbw_card_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/cbw_negotiation_note"

        android:textAllCaps="true"
        android:textColor="@color/card_title_color_status_confirm"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2e2e2e2e"/>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/cbw_negotiation_note_hint"
        android:id="@+id/cbw_negotiation_note_textedit"
        android:textColorHint="@color/vpi__bright_foreground_inverse_holo_light"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2e2e2e2e"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cbw_negotiation_note_button_cancel"
            android:text="@string/negotiation_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


</LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>